...
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:tools="http://schemas.android.com/tools">

        <TextView
                android:id="@+id/fact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc lobortis eget erat ut rutrum. Pellentesque at sagittis justo. Etiam ut lacus fringilla, dapibus eros vel, dapibus metus." />

        <com.bferrari.stonechallenge.components.Tag
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
...
